feat: add hard skills

--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
             <li>HTML</li>
             <li>CSS</li>
             <li>Sass</li>
+            <li>Bootstrap</li>
+            <li>Material UI</li>
+            <li>Jest</li>
+            <li>React Testing Library</li>
           </ul>
           <h3>Familiar with:</h3>
           <ul>
