fix: fix bug with the width
delete useless assets

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
             <li>Storybook</li>
             <li>Node.js</li>
             <li>Figma</li>
+            <li>Postman</li>
           </ul>
         </section>
         <section>
@@ -84,7 +85,8 @@
                 the frontend team, collaboration with the backend team, conducted code reviews on a daily basis,
                 created, evaluated and solved tasks with Jira.</li>
               <li><b>Technologies:</b> JavaScript, TypeScript, React, Redux, Material UI, Formik, React Router, React
-                Testing Library, Jest, Enzyme, Husky, Storybook, Reselect, Webpack, ESLint, Prettier, Scss.</li>
+                Testing Library, Jest, Enzyme, Husky, Storybook, Reselect, Postman, Webpack, ESLint, Prettier, Scss.
+              </li>
             </ul>
 
             <h3 class="project-name">Online store</h3>
