feat: update contacts section

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <li><img src="./assets/svg/phone.svg"> <a href="tel: 575-864-163">575-864-163</a></li>
             <li><img src="./assets/svg/email.svg"> <a
                 href="mailto:daryastartsava@gmail.com">daryastartsava@gmail.com</a></li>
+                <li><img src="./assets/svg/skype.svg"> foundkrapiva</li>
             <li><img src="./assets/svg/website.svg"> <a
                 href="https://github.com/darya-startsava">https://github.com/darya-startsava</a></li>
             <li><img src="./assets/svg/location.svg"> <span>Krakow, Poland</span></li>
@@ -38,7 +39,7 @@
         <section>
           <h3 class="sub-title">Summary</h3>
           <p>
-            JS frontend developer with teamwork experience specializing in React. Proficient in functional and OOP
+            JS/TS frontend developer with teamwork experience specializing in React. Proficient in functional and OOP
             paradigms, have solid understanding of design principles and patterns.
           </p>
         </section>
@@ -61,6 +62,7 @@
             <li>CSS/Sass</li>
             <li>Bootstrap</li>
             <li>GitHub Actions</li>
+            <li>Jira</li>
           </ul>
           <h3 class="skills-sub-title">Familiar with:</h3>
           <ul class="skills-wrapper">
@@ -76,14 +78,14 @@
           <div class="projects">
             <h3 class="project-name">Online banking - training project in AndersenLab</h3>
             <ul class="project-description">
-              <li><b>About:</b> The application with all the features of commercial online banking. Among them: 2-step
-                authentication, the ability to make transfers, order a new card.</li>
-              <li><b>Team size:</b> Project Manager, Business Analyst, Designer, 5 React developers, React Tech Lead, 3
-                Java developers, 2 QA, 2AQA.</li>
-              <li><b>Participation</b>: implemented transfer logic with additional confirmation logic, presented the
-                results of teamwork on a demo, took part in a daily meetings with the project manager and meetings of
-                the frontend team, collaboration with the backend team, conducted code reviews on a daily basis,
-                created, evaluated and solved tasks with Jira.</li>
+              <li><b>About:</b> Commercial online banking application with all appropriate features: MFA authentication,
+                accounts/cards management, transfers, orders, etc.</li>
+              <li><b>Team size:</b> Project manager, tech lead, business analyst, UI/UX engineer, 5 frontend developers,
+                3 backend developers, 2 QA, 2 AQA .</li>
+              <li><b>Participation</b>: implemented transactions management with additional confirmation logic,
+                conducted code reviews on a daily basis, collaborated with the backend team, estimated new requirements,
+                managed tasks in Jira, took part in Scrum ceremonies: daily sync-ups, plannings, demo sessions (led
+                several demos presenting the teamwork results).</li>
               <li><b>Technologies:</b> JavaScript, TypeScript, React, Redux, Material UI, Formik, React Router, React
                 Testing Library, Jest, Enzyme, Husky, Storybook, Reselect, Postman, Webpack, ESLint, Prettier, Scss.
               </li>
@@ -95,9 +97,8 @@
               https://github.com/darya-startsava/online-shop-app
             </a>
             <ul class="project-description">
-              <li><b>About:</b> The application for an online store with the ability to sort products, open a page
-                with a description of an individual product, add products to the cart, delete them, change the
-                quantity, select attributes, change currency.</li>
+              <li><b>About:</b> Online store application with a client-server architecture for purchasing products
+                (client part).</li>
               <li><b>Technologies:</b> JavaScript, React, Redux, Redux Thunk, GraphQL, React Router, Sass, Webpack,
                 ESLint, Prettier.</li>
             </ul>
@@ -157,15 +158,8 @@
           <p class="time-period"><img src="./assets/svg/calendar.svg"> 2022 - 2023</p>
           <h3 class="company-name highlighted">AndersenLab</h3>
           <p class="job-position">Trainee</p>
-          <p class="work-description">Was part of a team that was working on the online banking application. Find
-            details below
-            in projects section.</p>
-        </section>
-        <section>
-          <h3 class="sub-title">Education</h3>
-          <p class="time-period"><img src="./assets/svg/calendar.svg"> 2005 - 2010</p>
-          <h3 class="company-name highlighted">Belarusian State University</h3>
-          <p class="job-position">Faculty of Chemistry</p>
+          <p class="work-description">Frontend developer working on a commercial online banking application as part of a
+            distributed team. Details are in the projects section.</p>
         </section>
         <section>
           <h3 class="sub-title">Certification</h3>
@@ -184,6 +178,12 @@
             <li>Belarusian: <b>B1</b></li>
             <li>Russian: <b>native</b></li>
           </ul>
+        </section>
+        <section>
+          <h3 class="sub-title">Education</h3>
+          <p class="time-period"><img src="./assets/svg/calendar.svg"> 2005 - 2010</p>
+          <h3 class="company-name highlighted">Belarusian State University</h3>
+          <p class="job-position">Faculty of Chemistry</p>
         </section>
         <section>
           <h3 class="sub-title">Achievements</h3>
