feat: update skills

--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
           </ul>
           <h3 class="skills-sub-title">Familiar with:</h3>
           <ul class="skills-wrapper">
+            <li>Angular</li>
+            <li>Angular Material</li>
+            <li>RxJS</li>
             <li>Enzyme</li>
             <li>Storybook</li>
             <li>Node.js</li>
