feat: update with Angular project

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li><img src="./assets/svg/phone.svg"> <a href="tel: 575-864-163">575-864-163</a></li>
             <li><img src="./assets/svg/email.svg"> <a
                 href="mailto:daryastartsava@gmail.com">daryastartsava@gmail.com</a></li>
-                <li><img src="./assets/svg/skype.svg"> foundkrapiva</li>
+            <li><img src="./assets/svg/skype.svg"> foundkrapiva</li>
             <li><img src="./assets/svg/website.svg"> <a
                 href="https://github.com/darya-startsava">https://github.com/darya-startsava</a></li>
             <li><img src="./assets/svg/location.svg"> <span>Krakow, Poland</span></li>
@@ -55,6 +55,9 @@
             <li>Jest</li>
             <li>React Router</li>
             <li>Material UI</li>
+            <li>Angular</li>
+            <li>Angular Material</li>
+            <li>RxJS</li>
             <li>Formik</li>
             <li>Git</li>
             <li>Webpack</li>
@@ -66,9 +69,6 @@
           </ul>
           <h3 class="skills-sub-title">Familiar with:</h3>
           <ul class="skills-wrapper">
-            <li>Angular</li>
-            <li>Angular Material</li>
-            <li>RxJS</li>
             <li>Enzyme</li>
             <li>Storybook</li>
             <li>Node.js</li>
@@ -92,6 +92,20 @@
               <li><b>Technologies:</b> JavaScript, TypeScript, React, Redux, Material UI, Formik, React Router, React
                 Testing Library, Jest, Enzyme, Husky, Storybook, Reselect, Postman, Webpack, ESLint, Prettier, Scss.
               </li>
+            </ul>
+
+            <h3 class="project-name">Project Management App (Angular)</h3>
+            <a class="project-link"
+              href="https://github.com/darya-startsava/PMA-Angular/tree/project-management-app/project-management-app"
+              target="_blank"><img src="./assets/svg/website-black.svg">
+              https://github.com/darya-startsava/PMA-Angular/tree/project-management-app/project-management-app
+            </a>
+            <ul class="project-description">
+              <li><b>About:</b> Project Management App is a project management system. It is very useful for allocating,
+                prioritizing and completing tasks when working in a team. You can create and delete boards, create,
+                delete, move and prioritize tasks, assign a task to a team member.</li>
+              <li><b>Technologies:</b> JavaScript, TypeScript, Angular 15, Angular material, Transloco,
+                Webpack, ESLint, Prettier, Scss.</li>
             </ul>
 
             <h3 class="project-name">Online store</h3>
