feat: update information

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <section>
           <h3 class="sub-title">Projects</h3>
           <div class="projects">
-            <h3 class="project-name">Online banking - training project in AndersenLab</h3>
+            <h3 class="project-name">Online banking (React) - training project in AndersenLab</h3>
             <ul class="project-description">
               <li><b>About:</b> Commercial online banking application with all appropriate features: MFA authentication,
                 accounts/cards management, transfers, orders, etc.</li>
@@ -108,7 +108,7 @@
                 Webpack, ESLint, Prettier, Scss.</li>
             </ul>
 
-            <h3 class="project-name">Online store</h3>
+            <h3 class="project-name">Online store (React)</h3>
             <a class="project-link" href="https://github.com/darya-startsava/online-shop-app" target="_blank"><img
                 src="./assets/svg/website-black.svg">
               https://github.com/darya-startsava/online-shop-app
@@ -120,7 +120,7 @@
                 ESLint, Prettier.</li>
             </ul>
 
-            <h3 class="project-name">Kanban desk - collaborative project</h3>
+            <h3 class="project-name">Kanban desk - collaborative project (React)</h3>
             <a class="project-link" href="https://github.com/darya-startsava/project-management-app/tree/develop"
               target="_blank"><img src="./assets/svg/website-black.svg">
               https://github.com/darya-startsava/project-management-app/tree/develop
@@ -137,7 +137,19 @@
                 Material UI, React Router, React i18next, Webpack, ESLint, Prettier, Scss.</li>
             </ul>
 
-            <h3 class="project-name">RSLang - collaborative project</h3>
+            <h3 class="project-name">All movies (React)</h3>
+            <a class="project-link" href="https://github.com/darya-startsava/REACT2022Q1/tree/react-custom-app-state"
+              target="_blank"><img src="./assets/svg/website-black.svg">
+              https://github.com/darya-startsava/REACT2022Q1/tree/react-custom-app-state
+            </a>
+            <ul class="project-description">
+              <li><b>About:</b> The application allows you to search for films in third-party sources and create your
+                own file of actors.</li>
+              <li><b>Technologies:</b> JavaScript, TypeScript, React, Jest, React Testing Library, React Hook Form,
+                Husky, GitHub Actions, Webpack, ESLint, Prettier.</li>
+            </ul>
+
+            <h3 class="project-name">RSLang - collaborative project (JS)</h3>
             <a class="project-link" href="https://github.com/darya-startsava/rslang/tree/develop" target="_blank"><img
                 src="./assets/svg/website-black.svg"> https://github.com/darya-startsava/rslang/tree/develop
             </a>
@@ -154,17 +166,6 @@
                 Prettier, Scss.</li>
             </ul>
 
-            <h3 class="project-name">All movies</h3>
-            <a class="project-link" href="https://github.com/darya-startsava/REACT2022Q1/tree/react-custom-app-state"
-              target="_blank"><img src="./assets/svg/website-black.svg">
-              https://github.com/darya-startsava/REACT2022Q1/tree/react-custom-app-state
-            </a>
-            <ul class="project-description">
-              <li><b>About:</b> The application allows you to search for films in third-party sources and create your
-                own file of actors.</li>
-              <li><b>Technologies:</b> JavaScript, TypeScript, React, Jest, React Testing Library, React Hook Form,
-                Husky, GitHub Actions, Webpack, ESLint, Prettier.</li>
-            </ul>
           </div>
         </section>
 
