feat: add Angular to the summary

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <section>
           <h3 class="sub-title">Summary</h3>
           <p>
-            JS/TS frontend developer with teamwork experience specializing in React. Proficient in functional and OOP
+            JS/TS frontend developer with teamwork experience specializing in React and Angular. Proficient in functional and OOP
             paradigms, have solid understanding of design principles and patterns.
           </p>
         </section>
