feat: update cv

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="header">
       <div class="title-text">
         <h1>Darya Startsava</h1>
-        <h2 class="highlighted">Junior Frontend Developer</h2>
+        <h2 class="highlighted">Junior Fullstack JavaScript Developer</h2>
         <section>
           <ul class="contacts-wrapper">
             <li><img src="./assets/svg/phone.svg"> <a href="tel: 575-864-163">575-864-163</a></li>
@@ -28,6 +28,7 @@
             <li><img src="./assets/svg/location.svg"> <span>Krakow, Poland</span></li>
 
           </ul>
+          <a class="cv-link highlighted" href=https://darya-startsava.github.io/CV />Web version of CV</a>
         </section>
       </div>
       <div>
@@ -39,25 +40,35 @@
         <section>
           <h3 class="sub-title">Summary</h3>
           <p>
-            JS/TS frontend developer with teamwork experience specializing in React and Angular. Proficient in functional and OOP
-            paradigms, have solid understanding of design principles and patterns.
+            JS/TS frontend developer with teamwork experience specializing in React and Angular.
+            Node.js backend developer specializing in NestJS.
+            Proficient in functional and OOP paradigms, have solid understanding of design principles and patterns.
           </p>
         </section>
         <section>
           <h3 class="sub-title">Skills</h3>
           <ul class="skills-wrapper">
-            <li>JavaScript</li>
-            <li>TypeScript</li>
-            <li>React</li>
+            <li><b>JavaScript</b></li>
+            <li><b>TypeScript</b></li>
+            <li><b>React</b></li>
             <li>Redux/Redux Toolkit</li>
             <li>GraphQL</li>
             <li>React Testing Library</li>
             <li>Jest</li>
             <li>React Router</li>
             <li>Material UI</li>
-            <li>Angular</li>
+            <li><b>Angular</b></li>
             <li>Angular Material</li>
             <li>RxJS</li>
+            <li><b>Node.js</b></li>
+            <li><b>NestJS</b></li>
+            <li>Prisma ORM</li>
+            <li>SQL</li>
+            <li>PostgreSQL</li>
+            <li>Docker</li>
+            <li>WebSocket</li>
+            <li>Swagger</li>
+            <li>Postman</li>
             <li>Formik</li>
             <li>Git</li>
             <li>Webpack</li>
@@ -71,13 +82,24 @@
           <ul class="skills-wrapper">
             <li>Enzyme</li>
             <li>Storybook</li>
-            <li>Node.js</li>
             <li>Figma</li>
-            <li>Postman</li>
           </ul>
         </section>
         <section>
           <h3 class="sub-title">Projects</h3>
+
+          <h3 class="project-name">Rest Service (NestJS)</h3>
+          <a class="project-link" href="https://github.com/darya-startsava/nodejs2023Q2-service" target="_blank"><img
+              src="./assets/svg/website-black.svg">
+            https://github.com/darya-startsava/nodejs2023Q2-service
+          </a>
+          <ul class="project-description">
+            <li><b>About:</b> Service with authentication and authorization, possibility to change user password,
+              create, read, update, delete data
+              about artists, tracks and albums, add them to favorites.</li>
+            <li><b>Technologies:</b>TypeScript, NestJS, Docker, Prisma ORM, PostgreSQL, Node.js.</li>
+          </ul>
+
           <div class="projects">
             <h3 class="project-name">Online banking (React) - training project in AndersenLab</h3>
             <ul class="project-description">
