--- a/fullstack-developer/index.html
+++ b/fullstack-developer/index.html
@@ -28,7 +28,7 @@
             <li><img src="./assets/svg/location.svg"> <span>Krakow, Poland</span></li>
 
           </ul>
-          <a class="cv-link highlighted" href=https://darya-startsava.github.io/CV />Web version of CV</a>
+          <a class="cv-link highlighted" href=https://darya-startsava.github.io/CV/fullstack-developer/ />Web version of CV: https://darya-startsava.github.io/CV/fullstack-developer</a>
         </section>
       </div>
       <div>
