--- a/index.html
+++ b/index.html
@@ -19,15 +19,20 @@
         <h2 class="highlighted">Junior Frontend Developer</h2>
         <section>
           <ul class="contacts-wrapper">
-            <li><img src="./assets/svg/phone.svg"> <a href="tel: 575-864-163">575-864-163</a></li>
+            <li><img src="./assets/svg/phone.svg"> <a href="tel: +48-575-864-163">(+48)575-864-163</a></li>
             <li><img src="./assets/svg/email.svg"> <a
                 href="mailto:daryastartsava@gmail.com">daryastartsava@gmail.com</a></li>
             <li><img src="./assets/svg/skype.svg"> foundkrapiva</li>
+            <li><img src="./assets/svg/location.svg"> <span>Krakow, Poland</span></li>
             <li><img src="./assets/svg/website.svg"> <a
                 href="https://github.com/darya-startsava">https://github.com/darya-startsava</a></li>
-            <li><img src="./assets/svg/location.svg"> <span>Krakow, Poland</span></li>
+            <li><img src="./assets/svg/linkedin.svg">
+              <span>https://www.linkedin.com/in/darya-startsava-21a257245/</span>
+            </li>
 
           </ul>
+          <a class="cv-link highlighted" href=https://darya-startsava.github.io/CV/ />Web version of CV:
+          https://darya-startsava.github.io/CV</a>
         </section>
       </div>
       <div>
@@ -39,23 +44,23 @@
         <section>
           <h3 class="sub-title">Summary</h3>
           <p>
-            JS/TS frontend developer with teamwork experience specializing in React and Angular. Proficient in functional and OOP
-            paradigms, have solid understanding of design principles and patterns.
+            JS/TS frontend developer with teamwork experience specializing in React and Angular. Proficient in
+            functional and OOP paradigms, have solid understanding of design principles and patterns.
           </p>
         </section>
         <section>
           <h3 class="sub-title">Skills</h3>
           <ul class="skills-wrapper">
-            <li>JavaScript</li>
-            <li>TypeScript</li>
-            <li>React</li>
+            <li><b>JavaScript</b></li>
+            <li><b>TypeScript</b></li>
+            <li><b>React</b></li>
             <li>Redux/Redux Toolkit</li>
             <li>GraphQL</li>
             <li>React Testing Library</li>
             <li>Jest</li>
             <li>React Router</li>
             <li>Material UI</li>
-            <li>Angular</li>
+            <li><b>Angular</b></li>
             <li>Angular Material</li>
             <li>RxJS</li>
             <li>Formik</li>
@@ -66,12 +71,20 @@
             <li>Bootstrap</li>
             <li>GitHub Actions</li>
             <li>Jira</li>
+            <li><b>Node.js</b></li>
+            <li>NestJS</li>
+            <li>Prisma ORM</li>
+            <li>SQL</li>
+            <li>PostgreSQL</li>
+            <li>Docker</li>
+            <li>WebSocket</li>
+            <li>Swagger</li>
+
           </ul>
           <h3 class="skills-sub-title">Familiar with:</h3>
           <ul class="skills-wrapper">
             <li>Enzyme</li>
             <li>Storybook</li>
-            <li>Node.js</li>
             <li>Figma</li>
             <li>Postman</li>
           </ul>
@@ -79,6 +92,18 @@
         <section>
           <h3 class="sub-title">Projects</h3>
           <div class="projects">
+            <h3 class="project-name">Rest Service (NestJS)</h3>
+            <a class="project-link" href="https://github.com/darya-startsava/nodejs2023Q2-service" target="_blank"><img
+                src="./assets/svg/website-black.svg">
+              https://github.com/darya-startsava/nodejs2023Q2-service
+            </a>
+            <ul class="project-description">
+              <li><b>About:</b> Service with authentication and authorization, possibility to change user password,
+                create, read, update, delete data
+                about artists, tracks and albums, add them to favorites.</li>
+              <li><b>Technologies:</b>TypeScript, NestJS, Docker, Prisma ORM, PostgreSQL, Node.js.</li>
+            </ul>
+
             <h3 class="project-name">Online banking (React) - training project in AndersenLab</h3>
             <ul class="project-description">
               <li><b>About:</b> Commercial online banking application with all appropriate features: MFA authentication,
@@ -181,6 +206,13 @@
         </section>
         <section>
           <h3 class="sub-title">Certification</h3>
+          <h3 class="company-name highlighted">Rolling Scopes School Course "NodeJS"</h3>
+          <a href="https://app.rs.school/certificate/v2j9qgnl"
+            target="_blank">https://app.rs.school/certificate/v2j9qgnl</a>
+          <h3 class="company-name highlighted">EPAM "Front-End Mentoring Program"</h3>
+          <a href="https://darya-startsava.github.io/CV/assets/UpSkillMe_Certificate_Darya_Startsava.pdf"
+            target="_blank">https://darya-startsava.github.io/CV/
+            assets/UpSkillMe_Certificate_Darya_Startsava.pdf</a>
           <h3 class="company-name highlighted">Rolling Scopes School Course "React"</h3>
           <a href="https://app.rs.school/certificate/tqtxhetz"
             target="_blank">https://app.rs.school/certificate/tqtxhetz</a>
