feat: add link to cv web version

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
             <li><img src="./assets/svg/location.svg"> <span>Krakow, Poland</span></li>
 
           </ul>
+          <a class="cv-link highlighted" href=https://darya-startsava.github.io/CV/ />Web version of CV:
+          https://darya-startsava.github.io/CV</a>
         </section>
       </div>
       <div>
