--- a/fullstack-developer/index.html
+++ b/fullstack-developer/index.html
@@ -28,7 +28,8 @@
             <li><img src="./assets/svg/location.svg"> <span>Krakow, Poland</span></li>
 
           </ul>
-          <a class="cv-link highlighted" href=https://darya-startsava.github.io/CV/fullstack-developer/ />Web version of CV: https://darya-startsava.github.io/CV/fullstack-developer</a>
+          <a class="cv-link highlighted" href=https://darya-startsava.github.io/CV/fullstack-developer/ />Web version of
+          CV: https://darya-startsava.github.io/CV/fullstack-developer</a>
         </section>
       </div>
       <div>
@@ -88,19 +89,19 @@
         <section>
           <h3 class="sub-title">Projects</h3>
 
-          <h3 class="project-name">Rest Service (NestJS)</h3>
-          <a class="project-link" href="https://github.com/darya-startsava/nodejs2023Q2-service" target="_blank"><img
-              src="./assets/svg/website-black.svg">
-            https://github.com/darya-startsava/nodejs2023Q2-service
-          </a>
-          <ul class="project-description">
-            <li><b>About:</b> Service with authentication and authorization, possibility to change user password,
-              create, read, update, delete data
-              about artists, tracks and albums, add them to favorites.</li>
-            <li><b>Technologies:</b>TypeScript, NestJS, Docker, Prisma ORM, PostgreSQL, Node.js.</li>
-          </ul>
-
           <div class="projects">
+            <h3 class="project-name">Rest Service (NestJS)</h3>
+            <a class="project-link" href="https://github.com/darya-startsava/nodejs2023Q2-service" target="_blank"><img
+                src="./assets/svg/website-black.svg">
+              https://github.com/darya-startsava/nodejs2023Q2-service
+            </a>
+            <ul class="project-description">
+              <li><b>About:</b> Service with authentication and authorization, possibility to change user password,
+                create, read, update, delete data
+                about artists, tracks and albums, add them to favorites.</li>
+              <li><b>Technologies:</b>TypeScript, NestJS, Docker, Prisma ORM, PostgreSQL, Node.js.</li>
+            </ul>
+
             <h3 class="project-name">Online banking (React) - training project in AndersenLab</h3>
             <ul class="project-description">
               <li><b>About:</b> Commercial online banking application with all appropriate features: MFA authentication,
@@ -203,6 +204,12 @@
         </section>
         <section>
           <h3 class="sub-title">Certification</h3>
+          <h3 class="company-name highlighted">Rolling Scopes School Course "NodeJS"</h3>
+          <a href="https://app.rs.school/certificate/v2j9qgnl"
+            target="_blank">https://app.rs.school/certificate/v2j9qgnl</a>
+          <h3 class="company-name highlighted">EPAM "Front-End Mentoring Program"</h3>
+          <a href="https://darya-startsava.github.io/CV/assets/UpSkillMe_Certificate_Darya_Startsava.pdf"
+            target="_blank">https://darya-startsava.github.io/CV/assets/UpSkillMe_Certificate_Darya_Startsava.pdf</a>
           <h3 class="company-name highlighted">Rolling Scopes School Course "React"</h3>
           <a href="https://app.rs.school/certificate/tqtxhetz"
             target="_blank">https://app.rs.school/certificate/tqtxhetz</a>
