--- a/fullstack-developer/index.html
+++ b/fullstack-developer/index.html
@@ -209,7 +209,8 @@
             target="_blank">https://app.rs.school/certificate/v2j9qgnl</a>
           <h3 class="company-name highlighted">EPAM "Front-End Mentoring Program"</h3>
           <a href="https://darya-startsava.github.io/CV/assets/UpSkillMe_Certificate_Darya_Startsava.pdf"
-            target="_blank">https://darya-startsava.github.io/CV/assets/UpSkillMe_Certificate_Darya_Startsava.pdf</a>
+           target="_blank">https://darya-startsava.github.io/CV/
+            assets/UpSkillMe_Certificate_Darya_Startsava.pdf</a>
           <h3 class="company-name highlighted">Rolling Scopes School Course "React"</h3>
           <a href="https://app.rs.school/certificate/tqtxhetz"
             target="_blank">https://app.rs.school/certificate/tqtxhetz</a>
