feat: update cv

--- a/fullstack-developer/index.html
+++ b/fullstack-developer/index.html
@@ -19,17 +19,20 @@
         <h2 class="highlighted">Junior Fullstack JavaScript Developer</h2>
         <section>
           <ul class="contacts-wrapper">
-            <li><img src="./assets/svg/phone.svg"> <a href="tel: 575-864-163">575-864-163</a></li>
+            <li><img src="./assets/svg/phone.svg"> <a href="tel: +48-575-864-163">(+48)575-864-163</a></li>
             <li><img src="./assets/svg/email.svg"> <a
                 href="mailto:daryastartsava@gmail.com">daryastartsava@gmail.com</a></li>
             <li><img src="./assets/svg/skype.svg"> foundkrapiva</li>
+            <li><img src="./assets/svg/location.svg"> <span>Krakow, Poland</span></li>
             <li><img src="./assets/svg/website.svg"> <a
                 href="https://github.com/darya-startsava">https://github.com/darya-startsava</a></li>
-            <li><img src="./assets/svg/location.svg"> <span>Krakow, Poland</span></li>
+            <li><img src="./assets/svg/linkedin.svg">
+              <span>https://www.linkedin.com/in/darya-startsava-21a257245/</span>
+            </li>
 
           </ul>
-          <a class="cv-link highlighted" href=https://darya-startsava.github.io/CV/fullstack-developer/ />Web version of
-          CV: https://darya-startsava.github.io/CV/fullstack-developer</a>
+          <a class="cv-link highlighted" href=https://darya-startsava.github.io/CV/ />Web version of CV:
+          https://darya-startsava.github.io/CV</a>
         </section>
       </div>
       <div>
@@ -209,7 +212,7 @@
             target="_blank">https://app.rs.school/certificate/v2j9qgnl</a>
           <h3 class="company-name highlighted">EPAM "Front-End Mentoring Program"</h3>
           <a href="https://darya-startsava.github.io/CV/assets/UpSkillMe_Certificate_Darya_Startsava.pdf"
-           target="_blank">https://darya-startsava.github.io/CV/
+            target="_blank">https://darya-startsava.github.io/CV/
             assets/UpSkillMe_Certificate_Darya_Startsava.pdf</a>
           <h3 class="company-name highlighted">Rolling Scopes School Course "React"</h3>
           <a href="https://app.rs.school/certificate/tqtxhetz"
