--- a/index.html
+++ b/index.html
@@ -19,13 +19,16 @@
         <h2 class="highlighted">Junior Frontend Developer</h2>
         <section>
           <ul class="contacts-wrapper">
-            <li><img src="./assets/svg/phone.svg"> <a href="tel: 575-864-163">575-864-163</a></li>
+            <li><img src="./assets/svg/phone.svg"> <a href="tel: +48-575-864-163">(+48)575-864-163</a></li>
             <li><img src="./assets/svg/email.svg"> <a
                 href="mailto:daryastartsava@gmail.com">daryastartsava@gmail.com</a></li>
             <li><img src="./assets/svg/skype.svg"> foundkrapiva</li>
+            <li><img src="./assets/svg/location.svg"> <span>Krakow, Poland</span></li>
             <li><img src="./assets/svg/website.svg"> <a
                 href="https://github.com/darya-startsava">https://github.com/darya-startsava</a></li>
-            <li><img src="./assets/svg/location.svg"> <span>Krakow, Poland</span></li>
+            <li><img src="./assets/svg/linkedin.svg">
+              <span>https://www.linkedin.com/in/darya-startsava-21a257245/</span>
+            </li>
 
           </ul>
           <a class="cv-link highlighted" href=https://darya-startsava.github.io/CV/ />Web version of CV:
