--- a/fullstack-developer/index.html
+++ b/fullstack-developer/index.html
@@ -31,8 +31,8 @@
             </li>
 
           </ul>
-          <a class="cv-link highlighted" href=https://darya-startsava.github.io/CV/ />Web version of CV:
-          https://darya-startsava.github.io/CV</a>
+          <a class="cv-link highlighted" href=https://darya-startsava.github.io/CV/fullstack-developer/ />Web version of CV:
+          https://darya-startsava.github.io/CV/fullstack-developer</a>
         </section>
       </div>
       <div>
