feat: add  certificates

--- a/index.html
+++ b/index.html
@@ -206,6 +206,12 @@
         </section>
         <section>
           <h3 class="sub-title">Certification</h3>
+          <h3 class="company-name highlighted">Rolling Scopes School Course "Angular"</h3>
+          <a href="https://app.rs.school/certificate/0dhff5fj"
+            target="_blank">https://app.rs.school/certificate/0dhff5fj</a>
+            <h3 class="company-name highlighted">AWS Cloud Quest: Cloud Practitioner</h3>
+          <a href="https://www.credly.com/badges/67093366-6200-4bc9-b55b-8845263b7632/public_url"
+            target="_blank">https://www.credly.com/badges/67093366-6200-4bc9-b55b-8845263b7632/public_url</a>
           <h3 class="company-name highlighted">Rolling Scopes School Course "NodeJS"</h3>
           <a href="https://app.rs.school/certificate/v2j9qgnl"
             target="_blank">https://app.rs.school/certificate/v2j9qgnl</a>
