--- a/index.html
+++ b/index.html
@@ -60,10 +60,11 @@
             <li>Jest</li>
             <li>React Router</li>
             <li>Material UI</li>
-            <li><b>Angular</b></li>
-            <li>Angular Material</li>
-            <li>RxJS</li>
             <li>Formik</li>
+            <li><b>Angular</b></li>
+            <li>RxJS</li>
+            <li>NgRx</li>
+            <li>Angular Material</li>
             <li>Git</li>
             <li>Webpack</li>
             <li>HTML</li>
@@ -92,6 +93,32 @@
         <section>
           <h3 class="sub-title">Projects</h3>
           <div class="projects">
+
+            <h3 class="project-name">Connections App (Angular)</h3>
+            <a class="project-link" href="https://github.com/darya-startsava/ANGULAR2023Q4/tree/main/connections"
+              target="_blank"><img src="./assets/svg/website-black.svg">
+              https://github.com/darya-startsava/ANGULAR2023Q4/tree/main/connections
+            </a>
+            <ul class="project-description">
+              <li><b>About:</b> Connections App with authentication and authorization. Provides the possibility to have
+                both private conversations and
+                group chats. You can create your own group, delete it, start a dialogue with any user, and update groups
+                and user lists.</li>
+              <li><b>Technologies:</b>Angular, TypeScript, NgRx, RxJS, Angular Material, ESLint, Prettier, Scss</li>
+            </ul>
+
+            <h3 class="project-name">YouTube Client App (Angular)</h3>
+            <a class="project-link" href="https://github.com/darya-startsava/ANGULAR2023Q4/tree/main/youtube-client-app"
+              target="_blank"><img src="./assets/svg/website-black.svg">
+              https://github.com/darya-startsava/ANGULAR2023Q4/tree/main/youtube-client-app
+            </a>
+            <ul class="project-description">
+              <li><b>About:</b> YouTube Client App utilizes the YouTube API. You can search for videos, filter results,
+                view detailed information about each video, and manage your favorites by adding or
+                removing videos. You can also add and delete you own videos.</li>
+              <li><b>Technologies:</b>Angular, TypeScript, NgRx, RxJS, Angular Material, ESLint, Prettier, Scss</li>
+            </ul>
+
             <h3 class="project-name">Rest Service (NestJS)</h3>
             <a class="project-link" href="https://github.com/darya-startsava/nodejs2023Q2-service" target="_blank"><img
                 src="./assets/svg/website-black.svg">
@@ -206,6 +233,12 @@
         </section>
         <section>
           <h3 class="sub-title">Certification</h3>
+          <h3 class="company-name highlighted">Rolling Scopes School Course "Angular"</h3>
+          <a href="https://app.rs.school/certificate/0dhff5fj"
+            target="_blank">https://app.rs.school/certificate/0dhff5fj</a>
+          <h3 class="company-name highlighted">AWS Cloud Quest: Cloud Practitioner</h3>
+          <a href="https://www.credly.com/badges/67093366-6200-4bc9-b55b-8845263b7632/public_url"
+            target="_blank">https://www.credly.com/badges/67093366-6200-4bc9-b55b-8845263b7632/public_url</a>
           <h3 class="company-name highlighted">Rolling Scopes School Course "NodeJS"</h3>
           <a href="https://app.rs.school/certificate/v2j9qgnl"
             target="_blank">https://app.rs.school/certificate/v2j9qgnl</a>
