feat: add skills

--- a/index.html
+++ b/index.html
@@ -60,10 +60,11 @@
             <li>Jest</li>
             <li>React Router</li>
             <li>Material UI</li>
-            <li><b>Angular</b></li>
-            <li>Angular Material</li>
-            <li>RxJS</li>
             <li>Formik</li>
+            <li><b>Angular</b></li>
+            <li>RxJS</li>
+            <li>NgRx</li>
+            <li>Angular Material</li>
             <li>Git</li>
             <li>Webpack</li>
             <li>HTML</li>
